<?xml version="1.0" encoding="utf-8"?>

<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:padding="15dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardBackgroundColor="@color/browser_actions_bg_grey"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginVertical="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/job_title"
            android:textAlignment="center"
            android:textSize="15sp"
            android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:src="@drawable/ic_corporate"
                    app:tint="@color/blueWelcome" />

                <TextView
                    android:id="@+id/txtCorporate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/company_name"
                    android:textSize="14sp" />
            </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginHorizontal="10dp"
                android:layout_marginVertical="5dp"
                android:src="@drawable/ic_location"
                app:tint="@color/blueWelcome" />

            <TextView
                android:id="@+id/txtLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/location"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:src="@drawable/ic_money"
                    app:tint="@color/blueWelcome" />

                <TextView
                    android:id="@+id/txtSalary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/salary"
                    android:layout_marginEnd="15dp"
                    android:textSize="14sp" />

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_marginVertical="5dp"
                    android:src="@drawable/ic_time"
                    app:tint="@color/blueWelcome" />
                <TextView
                    android:id="@+id/txtWorkingTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/job_time"
                    android:textSize="14sp" />
        </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginVertical="5dp"
            android:src="@drawable/ic_jobs"
            app:tint="@color/blueWelcome" />

        <TextView
            android:id="@+id/txtCategories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="categories"
            android:layout_marginEnd="15dp"
            android:textSize="14sp" />
    </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
